8325945: Error reporting should limit the number of String characters printed